<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill_vertical"
    android:orientation="vertical"
    tools:context=".activity.ShareContact">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical"
        android:focusable="true"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/titleBar"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center_vertical"
            android:background="@drawable/header_title_bar_bg"
            xmlns:android="http://schemas.android.com/apk/res/android">
            <ImageView
                android:onClick="finish"
                android:id="@+id/back"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="35dp"
                android:padding="4dp"
                android:layout_height="35dp"
                android:src="@drawable/arrow_back_white"/>
            <LinearLayout
                android:id="@+id/titlePanel"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/titleTxt"
                    android:textColor="#fff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share_contact"
                    android:textSize="20sp"/>
            </LinearLayout>
        </LinearLayout>
        <EditText
            android:id="@+id/searchEditText"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:textColorHint="@color/hint"
            android:hint="@string/search"
            android:text=""
            android:focusableInTouchMode="true"
            android:layout_marginTop="10dp"
            android:inputType="text"/>
        <ListView
            android:id="@+id/contactList"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <Button
            android:layout_marginBottom="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:id="@+id/shareContactBtn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/red_border_rounder_corner"
            android:text="@string/share"
            android:textColor="@color/white"/>
    </LinearLayout>
    <ProgressBar
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"/>
</RelativeLayout>