<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MySharedContact">
    <RelativeLayout
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center_vertical"
        android:background="@drawable/header_title_bar_bg"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <ImageView
            android:onClick="finish"
            android:id="@+id/back"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="35dp"
            android:padding="4dp"
            android:layout_height="match_parent"
            android:src="@drawable/arrow_back_white"
            android:layout_alignParentLeft="true"/>
        <LinearLayout
            android:id="@+id/titlePanel"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/back">
            <TextView
                android:id="@+id/titleTxt"
                android:textColor="#fff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_refer_numbers"
                android:textSize="20sp"/>
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="@dimen/padding10"
        android:paddingRight="@dimen/padding10"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@id/titleBar"
        android:background="@color/contact_header_color"
        android:elevation="2dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:text="@string/mobile_number"
            android:textSize="16sp"
            android:gravity="left|center_vertical"
            android:textColor="@color/contact_header_txt_color"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:text="@string/status"
            android:gravity="left|center_vertical"
            android:textSize="16sp"
            android:textColor="@color/contact_header_txt_color"/>
    </LinearLayout>
    <View
        android:id="@+id/headerSeparator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/mid_grey"
        android:layout_below="@id/headerLayout">
    </View>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/mySharedContactList"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/headerSeparator"/>
    <TextView
        android:visibility="gone"
        android:textSize="18sp"
        android:textColor="#000"
        android:id="@+id/noresult"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No Results" />
    <ProgressBar
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"/>

</RelativeLayout>