<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MyWalletActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/light_gray1"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/titleBar"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center_vertical"
            android:background="@drawable/header_title_bar_bg"
            xmlns:android="http://schemas.android.com/apk/res/android">
            <ImageView
                android:onClick="finish"
                android:id="@+id/back"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="35dp"
                android:padding="4dp"
                android:layout_height="35dp"
                android:src="@drawable/arrow_back_white"/>
            <LinearLayout
                android:id="@+id/titlePanel"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/titleTxt"
                    android:textColor="#fff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_wallet"
                    android:textSize="20sp"/>
            </LinearLayout>
        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/header_title_bar_bg" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:background="@color/white" />

            </LinearLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/earnOfferLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/grey_border"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="50dp"
                    android:paddingTop="@dimen/padding10"
                    android:paddingLeft="@dimen/padding10"
                    android:paddingRight="@dimen/padding10"
                    android:paddingBottom="30dp"
                    android:layout_alignParentBottom="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginTop="20dp"
                        android:contentDescription="@string/my_wallet"
                        android:src="@drawable/money"
                        android:layout_gravity="center"
                        android:scaleType="centerInside"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/instant_earning_offer"
                        android:textColor="@color/welcome"
                        android:textStyle="bold"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/refer_your_friend_and_earn_unlimited_offer"
                        android:textColor="@color/gray"
                        android:textSize="16sp"
                        android:layout_marginTop="20dp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/availableBalanceTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="55sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="\u20B9 0"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:text="@string/available_balance"/>

                </LinearLayout>
            </RelativeLayout>

        </FrameLayout>

    </LinearLayout>
    <ProgressBar
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"/>
</RelativeLayout>
